[gd_scene load_steps=17 format=3 uid="uid://cclinrvnuno6c"]

[ext_resource type="Script" path="res://scripts/CharacterBody2D.gd" id="1_7qkqe"]
[ext_resource type="Texture2D" uid="uid://dsbxufabiasgo" path="res://assets/sprites/player.png" id="2_tnkvu"]
[ext_resource type="Script" path="res://scripts/PlayerAnimationController.gd" id="3_xfft1"]
[ext_resource type="AudioStream" uid="uid://cwk5g1ila100g" path="res://assets/sfx/jump.wav" id="4_51nt7"]
[ext_resource type="Texture2D" uid="uid://unqktk43tabt" path="res://assets/sprites/death_particle.png" id="5_mbj1l"]
[ext_resource type="AudioStream" uid="uid://l5j60m1vxjvo" path="res://assets/sfx/death.wav" id="6_xd17j"]
[ext_resource type="AudioStream" uid="uid://cywlbjrw6kvjx" path="res://assets/sfx/powerup.wav" id="7_emb38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsq7k"]
size = Vector2(12, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vrch"]
atlas = ExtResource("2_tnkvu")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yb2e"]
atlas = ExtResource("2_tnkvu")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mvds"]
atlas = ExtResource("2_tnkvu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_chbnq"]
atlas = ExtResource("2_tnkvu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgpq0"]
atlas = ExtResource("2_tnkvu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q55c"]
atlas = ExtResource("2_tnkvu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tp8kh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vrch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yb2e")
}],
"loop": true,
"name": &"falling",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mvds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chbnq")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgpq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q55c")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6b8du"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 0.88
hue_variation_min = -0.06
hue_variation_max = 0.4

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_7qkqe")
speed = 100.0
jump_velocity = -300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_qsq7k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tp8kh")
animation = &"falling"
autoplay = "idle"
frame_progress = 0.497621
script = ExtResource("3_xfft1")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 280
process_material = SubResource("ParticleProcessMaterial_6b8du")
texture = ExtResource("5_mbj1l")
one_shot = true
explosiveness = 0.75

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="JumpAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_51nt7")
pitch_scale = 1.1

[node name="DeathAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xd17j")

[node name="PowerupAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_emb38")

[connection signal="just_died" from="." to="." method="_on_just_died"]
